Update: Vimium CSS

--- a/browser-extensions/chrome/vimium/customize.css
+++ b/browser-extensions/chrome/vimium/customize.css
@@ -1,16 +1,18 @@
+/* linkhint boxes */
 div > .vimiumHintMarker {
-  /* linkhint boxes */
   background: #303030;
   border: 1px solid #000;
 }
 
+/* linkhint text */
 div > .vimiumHintMarker span {
-  /* linkhint text */
   color: white;
   font-weight: bold;
   font-size: 12px;
 }
 
-div > .vimiumHintMarker > .matchingCharacter {
+/* matched linkhint text */
+div.internalVimiumHintMarker > .matchingCharacter {
+  color: yellow;
 }
 
